Closed
Bug 1505388
Opened 7 years ago
Closed 7 years ago
Crash in mozilla::net::SpdyConnectTransaction::WriteSegments
Categories
(Core :: Networking: HTTP, defect, P1)
Core
Networking: HTTP
Tracking
()
RESOLVED
FIXED
mozilla65
| Tracking | Status | |
|---|---|---|
| firefox-esr60 | --- | unaffected |
| firefox63 | --- | unaffected |
| firefox64 | --- | unaffected |
| firefox65 | --- | fixed |
People
(Reporter: marcia, Assigned: u408661)
References
Details
(Keywords: crash, regression, Whiteboard: [necko-triaged])
Crash Data
Attachments
(1 file)
This bug was filed from the Socorro interface and is
report bp-f4294b26-32e6-47d6-8411-f26a90181107.
=============================================================
Seen while looking at nightly crash data: . Crashes started using Build ID 20181107100135. Possible regression range based on Build ID: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=957a743c4ca2907d8e357fce43fbcd9f619f1122&tochange=070757a0160c8e6156cf6d8d567a0af280dc33e8
Bug 1434137? ni on Nicholas.
Top 10 frames of crashing thread:
0 xul.dll mozilla::net::SpdyConnectTransaction::WriteSegments netwerk/protocol/http/TunnelUtils.cpp:1385
1 xul.dll mozilla::net::Http2Stream::WriteSegments netwerk/protocol/http/Http2Stream.cpp:319
2 xul.dll mozilla::net::Http2Session::WriteSegmentsAgain netwerk/protocol/http/Http2Session.cpp:3387
3 xul.dll mozilla::net::nsHttpConnection::OnInputStreamReady netwerk/protocol/http/nsHttpConnection.cpp:2422
4 xul.dll void mozilla::net::nsSocketInputStream::OnSocketReady netwerk/base/nsSocketTransport2.cpp:293
5 xul.dll mozilla::net::nsSocketTransport::OnSocketReady netwerk/base/nsSocketTransport2.cpp:2317
6 xul.dll mozilla::net::nsSocketTransportService::Run netwerk/base/nsSocketTransportService2.cpp:1040
7 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1246
8 xul.dll NS_ProcessNextEvent xpcom/threads/nsThreadUtils.cpp:530
9 xul.dll mozilla::ipc::MessagePumpForNonMainThreads::Run ipc/glue/MessagePump.cpp:364
=============================================================
Flags: needinfo?(hurley)
| Reporter | ||
Comment 1•7 years ago
|
||
There are Mac crashes as well (so far all on 10.14), changing platform to all.
OS: Windows 10 → All
Hardware: Unspecified → All
Looks like I messed something up when separating out stuff that applies to both websockets and regular tunnels. Likely cb is null, I just need to figure out the right behaviour when that's the case (based on the previous code) and make sure that's handled properly. Aiming to have a patch later today.
Assignee: nobody → hurley
Flags: needinfo?(hurley)
Priority: -- → P1
Whiteboard: [necko-triaged]
Pushed by hurley@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/f796b2c950e0
fix crash introduced by bug Bug 1434137. r=kershaw
Comment 5•7 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla65
Updated•7 years ago
|
status-firefox63:
--- → unaffected
status-firefox-esr60:
--- → unaffected
You need to log in
before you can comment on or make changes to this bug.
Description
•