Bug 1505388 - fix crash introduced by bug Bug 1434137. r=kershaw

Differential Revision: https://phabricator.services.mozilla.com/D11184